--- a/style.css
+++ b/style.css
@@ -33,6 +33,41 @@ header li {
     margin-left: 20px;
 }
 
+ul {
+   padding-inline-start:  0px;
+}
+
+.horizontal {
+     display: inline; 
+     border-left: 2px solid; 
+     padding-left: 0.3em; 
+}
+.first { 
+    border-left: none; 
+}
+
+.list {
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
+}
+
+hr { 
+    border: 0; 
+    height: 1px; 
+    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+  }
+hr.thick {
+    border: 0; 
+    height: 3px; 
+    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+}
+
 section {
     border: 1px solid black;
     display: flex;
@@ -49,9 +84,7 @@ section {
 
 
 .copyIP {
-    width: 310px;
     color: #0c0c0e;
-    padding-left: 25px;
     cursor: pointer;
     letter-spacing: 2px;
     font-family: Minecraft;
@@ -77,6 +110,7 @@ section {
 
 #technicalities .thumbnail-img {
     height: 100px;
+    margin-top: 5px;
     border-radius: 25px;
 }
 
@@ -116,9 +150,9 @@ header a {
 
 #technicalities {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('images/morning-statue-background.png');
-    justify-content: left;
-    align-items: left;
-    text-align: left;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     padding-top: 50px;
     padding-right: 30px;
     padding-bottom: 50px;
@@ -127,9 +161,9 @@ header a {
 
 #rules {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('images/night-base-background.png');
-    justify-content: left;
-    align-items: left;
-    text-align: left;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     padding-top: 50px;
     padding-right: 30px;
     padding-bottom: 50px;
