Minor tweak on the server ip
Setting the server ip to bold to make it stand out more

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ section {
     cursor: pointer;
     letter-spacing: 2px;
     font-family: Minecraft;
+    font-weight: bold;
     text-shadow: 1px 1px 0 #7A7A7A;
 }
 
