--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-@font-face {
-    font-family: 'Minecraft';
-    src: url('fonts/Minecraft.otf');
-}
-
 body {
     margin: 0;
     margin-top: 50px;
-    font-family: sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 
 header {
@@ -25,8 +20,9 @@ header * {
     height: 50px;
 }
 
-header ul {
-    padding: 0;
+header a {
+    text-decoration: none;
+    color: black;
 }
 
 header li {
@@ -34,209 +30,21 @@ header li {
 }
 
 ul {
-   padding-inline-start:  0px;
-}
-
-.horizontal {
-     display: inline; 
-     border-left: 2px solid; 
-     padding-left: 0.3em; 
-}
-.first { 
-    border-left: none; 
-}
-
-.list {
-    padding-top: 2.5px;
-    padding-bottom: 2.5px;
-    padding-inline-start: 0px;
-}
-
-hr { 
-    border: 0; 
-    height: 1px; 
-    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
-  }
-hr.thick {
-    border: 0; 
-    height: 3px; 
-    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+   padding-inline-start:  20px;
 }
 
 section {
-    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: Garamond, serif;
-
-    background-size: cover; /* Add this line */
-    background-position: center center; /* Add this line */
-    background-repeat: no-repeat; /* Add this line */
-    background-attachment: fixed; /* Add this line */
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-#serverStatus.minecraft {
-    background-image : url('images/dirt-backround.png');
-    color: #e8e8e8;
-    display: inline-flex;
-    font-family: 'Minecraft';
-    letter-spacing: 0.15em;
-    line-height: 20px;
-    padding: 0.5em;
-    text-align: center;
-    border-radius: 5px;
-}
-
-.server-status {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.server-status-img {
-    height: 85px;
-    margin-right: 10px;
-}
-
-.status-text {
-    text-align: center;
-    line-height: 1.8;
-    font-weight: bold;
-    font-size: x-large;
-}
-
-.server {
-    width: 100%;
-    max-width: 850px;
-}
-
-.motd {
-    line-height: 25px;
-    padding-top: 10px;
-}
-
-.server.minecraft {
-    background-image : url('images/dirt-backround.png');
-    color: #e8e8e8;
-    display: inline-flex;
-    justify-content: space-between;
-    font-family: 'Minecraft';
-    letter-spacing: 0.15em;
-    line-height: 20px;
-    padding: 0.5em;
-    font-size: large;
-    text-align: left;
-    border-radius: 25px;
-}
-
-.server-img-container {
-    height: 85px;
-    width: 85px;
-    max-width: 100%;
-    margin-right: 10px;
-    overflow: hidden;
-}
-.server-img {
-    height: 100%;
-    width: 100%;
-    flex-grow: 0;
-    object-fit: cover;
-}
-
-.server-info {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 750px;
-}
-
-.status-text {
-    text-align: center;
-    line-height: 1.8;
-    font-weight: bold;
-    font-size: x-large;
-}
-
-.online-players-separator {
-    color: rgb(94, 94, 94);
-}
-
-#ServerInfo.online-players {
-    color: #afafaf;
-    text-align: right;
-    line-height: 1.5;
-}
-
-#serverStatus .online-Players {
-    color: #afafaf;
-    text-align: center;
-    line-height: 1.5;
-}
-
-.ping-img {
-    height: 20px;
-}
-
-.discord {
-    margin-top: 5px;
-}
-
-.copyIP {
-    color: #0c0c0e;
-    cursor: pointer;
-    letter-spacing: 2px;
-    font-family: Minecraft;
-    font-weight: bold;
-    text-shadow: 1px 1px 0 #7A7A7A;
-}
-
-.copyIP_tooltip {
-    display: none;
-    text-align: center;
-    font-size: small;
-    font-family: Garamond, serif;
-    text-shadow: 0px 0px;
-}
-
-
-.copyIP:hover  .copyIP_tooltip {
-    display: block;
-    color: rgb(78, 78, 78);
-}
-
-
-#minehome .profile-img {
-    width: 300px;
-    border-radius: 50%;
-}
-
-#technicalities .thumbnail-img {
-    height: 100px;
-    margin-top: 5px;
-}
-
-#rules .thumbnail-img {
-    width: 50px;
-    border-radius: 25px;
-    vertical-align: middle;
-}
-
-footer {
-    text-align: center;
-    padding: 50px;
-}
-
-#minehome h1 {
+section h1 {
     font-size: 3em;
 }
 
@@ -248,42 +56,91 @@ section h3 {
     font-size: 1.5em;
 }
 
-header a {
-    text-decoration: none;
-    color: black;
+section h4 {
+    font-size: 1em;
 }
 
-/* Add everything below here */
+footer {
+    text-align: center;
+    padding: 50px;
+}
 
 #minehome {
+    border: 1px solid black;
     height: 1000px;
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('images/minecraft-family-background.png');
 }
 
+#minehome .profile-img {
+    width: 300px;
+    border-radius: 50%;
+}
+
 #technicalities {
+    border: 1px solid black;
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('images/morning-statue-background.png');
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+#technicalities-content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50em;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#technicalities .thumbnail-img {
+    height: 100px;
+    margin-top: 5px;
 }
 
 #rules {
+    border: 1px solid black;
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('images/night-base-background.png');
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
 }
 
-.noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome and Opera */
-  }
+#rules-content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50em;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#rules .thumbnail-img {
+    height: 300px;
+    margin-top: 5px;
+}
+
+#addons {
+    border: 1px solid black;
+    background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('images/avionpapilaps_base.png');
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#addons-content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50em;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#addons .thumbnail-img {
+    height: 100px;
+    margin-top: 5px;
+}
